<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Submission4</string>
    <string name="text_hint_movie">Title Movie</string>
    <string name="search">Search</string>
    <string name="hint_search">Search Movie</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="search_process">Process…</string>
    <string name="txt_overview">OVERVIEW</string>
    <string name="hint_date" translatable="false">20-11-2018</string>
    <string name="release_date">Release Date</string>
    <string name="hint_10" translatable="false">10</string>
    <string name="change_lang_setting">Change Language Setting</string>
    <string name="text_null" translatable="false">-</string>
    <string name="hint_vote" translatable="false">5.6</string>

    <string name="favorite">Favorite</string>
    <string name="message_favorite_null">Favorite movie not available</string>
    <string name="action_send_type" translatable="false">text/plain</string>
    <string name="msg_success_fav">Successfully added movie favorites</string>
    <string name="msg_remove_fav">Your favorite movie has been deleted</string>
    <string name="image_movie" translatable="false">Image Movie :</string>
    <string name="toolbar_title">Catalog Movie</string>
</resources>
