<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="10"
        android:title="@string/search"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_local_movies"
        android:orderInCategory="20"
        android:title="@string/favorite"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_change_lang"
        android:orderInCategory="30"
        android:title="@string/change_lang_setting"
        app:showAsAction="never" />
</menu>